# pear

./: README.md  bun.lockb  index.ts  package.json  resources.txt  spec.md  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/groq_rs/: Cargo.toml
src-tauri/groq_rs/src/: lib.rs  message.rs
src-tauri/src/: ai.rs  audio.rs  cache.rs  commands.rs  env_utils.rs  error.rs  file.rs  fs.rs  langchain.rs  lib.rs  main.rs  models.rs  neo4j.rs  parser.rs  supabase.rs  treesitter.rs  ts_queries.rs  voice.rs
src-tauri/src/examples/: neo4j_with_env.rs
src-tauri/src/file_manager/: file_tracker.rs  file_watcher.rs  mod.rs  neo4j.rs  state.rs
src-tauri/supabase/: config.toml
src/components/: code-graph.tsx  code-snippet.tsx  conversation-bubble.tsx  directory-selector.tsx  file-explorer.tsx  pear-logo.tsx  tree.tsx  voice-controls.tsx  wave-background.tsx
src/components/ui/: button.tsx  tree.tsx
src/context/: state.ts
src/hooks/: use-codebase.ts  use-conversation.ts  useCodebase.ts  useConversation.ts  useFileWatcher.ts
src/lib/: code-utils.ts  mock-data.ts  neo4j.ts  types.ts
src/utils/: speech-recognition.ts
supabase/: config.toml
supabase/functions/embed/: index.ts
supabase/migrations/: 01_createdb.sql
