[package]
name = "pear"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.12.15", features = ["json"] } # Or latest 0.12.x
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.24"                                   # Or your current version
tree-sitter-typescript = "0.23"                        # Use versions compatible with tree-sitter core
tree-sitter-python = "0.23"                            # Use versions compatible with tree-sitter core
serde_json = "1.0"                                     # If not already present for other reasons
regex = "1.9.5"
groq_api_rust = { path = "./groq_rs" }
tempfile = "3.19.1"
directories = "6.0.0"
hound = "3.5.1"
curl = "0.4.47"
futures = "0.3.31"
tokio-core = "0.1.18"
tokio-curl = "0.1.11"
dotenv = "0.15.0"
thiserror = "2.0.12"
rodio = "0.20.1"
lazy_static = "1.5.0"
postgrest = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = "1.16.0"
langchain-rust = { version = "4.6.0", features = ["postgres"] }
async-openai = "0.28.0"
secrecy = "0.10.3"
