[package]
name = "pear"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tree-sitter and language grammars
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
# Neo4j driver
neo4rs = "0.8"
# Directory traversal
walkdir = "2"
# Environment variables
dotenvy = "0.15"
# Error handling
thiserror = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
tempfile = "3.19.1"
ignore = "0.4.23"
uuid = "1.16.0"
blake3 = "1.8.2"
glob = "0.3.2"
anyhow = "1.0.98"
log = "0.4.27"
notify = "8.0.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
md5 = "0.7.0"
queues = "1.1.0"
